--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,7 +16,24 @@
   background-position: center;
   background-size: cover;
 }
-.container-titulo-topo{
+.container-nome-logo {
+  max-width: 250px;
+  color: #3c184e;
+}
+.container-nome-logo img {
+  width: 30px;
+  margin-right: 5px;
+}
+.container-nome-logo .nome-pet-shop {
+  font-size: 35px;
+  margin: 0 0 5px 0;
+}
+.container-nome-logo .slogan-pet-shop {
+  font-size: 14px;
+  text-align: center;
+  margin: 0;
+}
+.container-titulo-topo {
   max-width: 1024px;
   border-radius: 10px;
   padding: 40px;
@@ -24,44 +41,25 @@
   background: #ffffffc4;
   box-shadow: 0 8px 32px #1f26875e;
 }
-.titulo-topo{
+.titulo-topo {
   font-size: 60px;
   color: #3c184e;
   text-align: center;
   font-weight: 800;
   margin: 0 0 40px;
 }
-.nome-pet-shop .container-nome-logo {
-  font-size: 35px;
-  margin: 0 0 5px 0;
+.link-fale-conosco {
+  text-align: center;
+  width: 200px;
+  padding: 10px 25px;
+  font-size: 20px;
+  background-color: #3c184e;
+  border-radius: 10px;
+  margin: 0 auto;
 }
-.container-nome-logo {
-  max-width: 250px;
-  color:#3c184e;
-}
-
-.container-nome-logo img {
-  width: 30px;
-  margin-right: 5px;
+.link-fale-conosco a {
+  color: #ffff;
 }
 .container-titulo-topo img {
   width: 20px;
 }
-
-
-
-
-.container-nome-logo .slogan-pet-shop {
-  font-size: 14px;
-  text-align: center;
-  margin: 0;
-}
-
-
-
-
-
-
-
-
-
