finalizando seção serviços

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -68,3 +68,22 @@
   font-weight: 700;
   font-style: italic;
 }
+
+.box-servicos{
+  max-width: 800px;
+  color:#3c184e;
+  margin: 0 auto 50px;
+}
+.box-servicos li {
+  font-size: 20px;
+  margin: 0 0 10px;
+}
+h3 {
+  font-size: 36px;
+  color: #3c184e;
+  text-align: center;
+  margin: 0 0 45px;
+}
+
+
+
