finalizando redes sociais

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -84,6 +84,24 @@ h3 {
   text-align: center;
   margin: 0 0 45px;
 }
-
+/* Início CSS faixa */
+.faixa {
+  background-color: #3c184e;
+  text-align: center;
+}
+.text-faixa {
+  max-width: 800px;
+  margin: 0 auto 50px;
+  color: #fff;
+  font-size: 40px;
+}
+.redes-sociais a {
+  margin: 0 20px;
+}
+.redes-sociais img {
+  width: 50px;
+  height: 50px;
+}
+/* Fim CSS Faixa */
 
 
