seção onde estamos finalizada

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -115,7 +115,22 @@ h3 {
 .logo-marca {
   width: 148px;
   height: 148px;
-  margin: 0 15px
-
+  margin: 0 15px;
+}
 /* Fim CSS marcas */
+
+/*  Inicio onde estamos */
+.onde-estamos {
+  text-align: center;
+}
+.onde-estamos p {
+  color: #3c184e; 
+  font-size: 20px;
+  margin: 0 0 45px;
+}
+.onde-estamos iframe {
+  width: 800px;
+  height: 450px;
+}
+
 
